--- a/src/components/stellar-cycle/StellarCycle.scss
+++ b/src/components/stellar-cycle/StellarCycle.scss
@@ -12,3 +12,28 @@
   cursor: pointer;
   border: 2px solid white;
 }
+
+.stellar-animation-container div {
+  background: #3BD186;
+  width: 100px;
+  height: 100px;
+}
+
+
+.stellar-container {
+  width: 100%;
+  height: 100%;
+  place-content: center;
+  overflow: hidden;
+  border-radius: 30px;
+}
+
+.item {
+  fill: none;
+  width: 100%;
+  overflow: visible;
+  stroke: green;
+  stroke-width: 25;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+}
