--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,9 @@
 }
 
 .blue-button:hover {
-  border: 2px solid white !important;
+  border: 1px solid white !important;
 }
 
 .green-button:hover {
-  border: 2px solid white !important;
+  border: 1px solid transparent !important;
 }
