--- a/src/components/telescope-activity/Telescope.scss
+++ b/src/components/telescope-activity/Telescope.scss
@@ -4,3 +4,22 @@
   height: 15px;
   filter: blur(2px);
 }
+
+.telescope-container {
+  width: 100%;
+  height: 100%;
+  place-content: center;
+  overflow: hidden;
+  border-radius: 30px;
+}
+
+.telescope-item {
+  fill: none;
+  width: 100%;
+  overflow: visible;
+  stroke: #E1C973;
+  stroke-width: 10;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  filter: blur(2px);
+}
