lots of updates

--- a/src/components/stellar-cycle/StellarCycle.scss
+++ b/src/components/stellar-cycle/StellarCycle.scss
@@ -32,8 +32,8 @@
   fill: none;
   width: 100%;
   overflow: visible;
-  stroke: green;
-  stroke-width: 25;
+  stroke: #3BD186;
+  stroke-width: 20;
   stroke-linejoin: round;
   stroke-linecap: round;
 }
