--- a/src/components/rocket-building/Rocket.scss
+++ b/src/components/rocket-building/Rocket.scss
@@ -1,17 +1,5 @@
-.side-booster-left div {
-  background: #3BD186;
-  width: 150px;
-  height: 100px;
-}
-
-.interstage div {
-  background: #3BD186;
-  width: 300px;
-  height: 100px;
-}
-
-.side-booster-right div {
-  background: #3BD186;
-  width: 150px;
-  height: 100px;
+.ship div {
+  background: transparent;
+  width: 100%;
+  height: 300px;
 }
