--- a/src/components/rocket-building/Rocket.scss
+++ b/src/components/rocket-building/Rocket.scss
@@ -3,5 +3,9 @@
 }
 
 .part-image:hover {
-  box-shadow: 10px 10px 5px #ccc;
+  box-shadow: 2px 2px 1px #ccc;
+}
+
+.arrow:hover {
+  cursor: pointer;
 }
