Added all images to rocket building activity, added logic to stellar cycle, worked on about us page, and a few other things

--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -16,3 +16,8 @@
   color: #29405B;
   cursor: pointer;
 }
+
+.learn-section:hover {
+  background-color: #3BD186 !important;
+  cursor: pointer;
+}
