working on fixing styling bugs everywhere (especially slide out menus), and also making some pages mobile friendly

--- a/src/components/rocket-building/Rocket.scss
+++ b/src/components/rocket-building/Rocket.scss
@@ -2,11 +2,12 @@
   background: transparent;
 }
 
-.part-image:hover {
-
+.part-image {
+  display: block;
+  margin: auto;
 }
 
-.arrow:hover {
+.part-image:hover {
   cursor: pointer;
 }
 
